[gd_scene load_steps=4 format=3 uid="uid://bul6s4gfhknlu"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_8qgfj"]
[ext_resource type="Texture2D" uid="uid://d35lthwg41ebg" path="res://art/ui/12_Metalworks_Theme/Sprites/UI_Metalworks_Button01a_1.png" id="2_pwqtw"]

[sub_resource type="LabelSettings" id="LabelSettings_6hhyd"]
font_size = 26
font_color = Color(0, 0, 0, 1)

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_8qgfj")

[node name="RespawnControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="end_of_game_screen" type="Node2D" parent="RespawnControl"]
position = Vector2(20, 24)

[node name="RespawnButton" type="Button" parent="RespawnControl/end_of_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -98.0
offset_top = -86.0
offset_right = 98.0
offset_bottom = -22.0

[node name="Sprite2D" type="Sprite2D" parent="RespawnControl/end_of_game_screen/RespawnButton"]
position = Vector2(98, 32)
scale = Vector2(3, 2)
texture = ExtResource("2_pwqtw")

[node name="Label" type="Label" parent="RespawnControl/end_of_game_screen/RespawnButton"]
offset_left = 11.0
offset_top = 6.0
offset_right = 185.0
offset_bottom = 50.0
text = "Respawn"
label_settings = SubResource("LabelSettings_6hhyd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="RespawnControl/end_of_game_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -98.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 78.0

[node name="Sprite2D" type="Sprite2D" parent="RespawnControl/end_of_game_screen/MainMenuButton"]
position = Vector2(98, 32)
scale = Vector2(3, 2)
texture = ExtResource("2_pwqtw")

[node name="Label" type="Label" parent="RespawnControl/end_of_game_screen/MainMenuButton"]
offset_left = 11.0
offset_top = 6.0
offset_right = 185.0
offset_bottom = 50.0
text = "Main Menu"
label_settings = SubResource("LabelSettings_6hhyd")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="RespawnControl/end_of_game_screen/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="RespawnControl/end_of_game_screen/MainMenuButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="RespawnControl/end_of_game_screen/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
